@@ -67,6 +67,7 @@ Version 1.3.6+svn:
    * new extra_defines= key to define in campaigns some other preprocessor
      symbol *before* the files are repreprocessed
    * fog and shroud tiles are now defined by the TerrainWML (not [game_config])
+   * new key store_location_as= to store generated chamber item locations
  * team color
    * allow color ranges to be defined on-the-fly (like color palettes)
    * now [side] colour=<string> is valid (previously only int)
